/*
 * This file is part of Dependency-Track.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 * Copyright (c) Steve Springett. All Rights Reserved.
 */
syntax = "proto3";

package org.dependencytrack.policy.v1;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "org.dependencytrack.proto.policy.v1";

message Component {
  string uuid = 1;
  optional string group = 2;
  string name = 3;
  string version = 4;
  optional string cpe = 5;
  optional string purl = 6;
  optional string swid_tag_id = 7;
  optional bool internal = 8;
  optional License license = 9;
  optional string md5 = 20;
  optional string sha1 = 21;
  optional string sha256 = 22;
  optional string sha384 = 23;
  optional string sha512 = 24;
  optional string sha3_256 = 25;
  optional string sha3_384 = 26;
  optional string sha3_512 = 27;
  optional string blake2b_256 = 28;
  optional string blake2b_384 = 29;
  optional string blake2b_512 = 30;
  optional string blake3 = 31;
}

message License {
  string uuid = 1;
  string id = 2;
  string name = 3;
  repeated Group groups = 4;
  bool is_osi_approved = 5;
  bool is_fsf_libre = 6;
  bool is_deprecated_id = 7;
  bool is_custom = 8;

  message Group {
    string uuid = 1;
    string name = 2;
  }
}

message Project {
  string uuid = 1;
  optional string group = 2;
  string name = 3;
  optional string version = 4;
  repeated string tags = 5;
  optional string cpe = 6;
  optional string purl = 7;
  optional string swid_tag_id = 8;
}

message Vulnerability {
  string uuid = 1;
  string id = 2;
  string source = 3;
  repeated Alias aliases = 4;
  repeated int32 cwes = 5;
  optional google.protobuf.Timestamp created = 6;
  optional google.protobuf.Timestamp published = 7;
  optional google.protobuf.Timestamp updated = 8;
  string severity = 20;
  optional double cvssv2_base_score = 21;
  optional double cvssv2_impact_subscore = 22;
  optional double cvssv2_exploitability_subscore = 23;
  optional string cvssv2_vector = 24;
  optional double cvssv3_base_score = 25;
  optional double cvssv3_impact_subscore = 26;
  optional double cvssv3_exploitability_subscore = 27;
  optional string cvssv3_vector = 28;
  optional double epss_score = 29;
  optional double epss_percentile = 30;

  message Alias {
    string id = 1;
    string source = 2;
  }

}